# geoips_plugin_example

./: .cspell.json  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  README.md  README_PLUGIN.md  pyproject.toml  setup.py  setup.sh
docs/: geoips_plugin_example_overview.rst  geoips_plugin_index.rst  installation.rst  template_plugin_index.rst  template_plugin_overview.rst
docs/archive/: CHANGELOG.md
docs/source/geoips_plugin_example_api/: index.rst
docs/source/introduction/: description_geoips_plugin_example.rst  index.rst
docs/source/release/latest/: update-black-formatting.rst
docs/source/releases/: CHANGELOG.md  index.rst  v1_10_0.rst  v1_10_0a0.rst  v1_10_2.rst  v1_10_3.rst  v1_11_0.rst  v1_11_1.rst  v1_11_2.rst  v1_11_3.rst  v1_11_7.rst  v1_11_7a0.rst  v1_13_0.rst  v1_8_0.rst
docs/source/releases/1.14.0/: 1.14.0.yaml
docs/source/releases/1.15.1/: 1.15.1-bug-fixes-03-turn-off-matplotlib-interpolation.yaml
docs/source/releases/1.15.2/: 1.15.2-release-note.yaml  547-add-support-for-xarray_dict-to-algorithm-to-output-format-family.yaml
docs/source/releases/1.16.2/: 1.16.2-release-note.yaml  1.16.2-update-geostationary-test-data-locations.yaml
docs/source/releases/1.17.1/: 1.17.1-release-note.yaml
docs/source/releases/1.18.0/: 1.18.0-patch-internal-black-updates.yaml
docs/source/releases/latest/: 14-update-integration-test-comparrison-imagery-for-matplotlib-3100.yaml  update-black-formatting.yaml
geoips_plugin_example/: __init__.py  default_algorithm.py
geoips_plugin_example/interface_modules/filename_formats/: test_fname.py
geoips_plugin_example/interface_modules/interpolation/pyresample_wrappers/: interp_gauss_test.py
geoips_plugin_example/interface_modules/user_colormaps/visir/: Infrared_Test.py
geoips_plugin_example/plugins/: __init__.py
geoips_plugin_example/plugins/modules/: __init__.py
geoips_plugin_example/plugins/modules/algorithms/: __init__.py  example_xarray_dict_to_xarray_dict_algorithm.py  single_channel_test.py
geoips_plugin_example/plugins/modules/colormappers/: __init__.py
geoips_plugin_example/plugins/modules/colormappers/visir/: Infrared_Test.py  __init__.py
geoips_plugin_example/plugins/modules/colormaps/: __init__.py
geoips_plugin_example/plugins/modules/colormaps/visir/: Infrared_Test.py  __init__.py
geoips_plugin_example/plugins/modules/filename_formatters/: __init__.py  test_fname.py
geoips_plugin_example/plugins/modules/interpolators/: __init__.py
geoips_plugin_example/plugins/modules/interpolators/pyresample_wrappers/: __init__.py  interp_gauss_test.py
geoips_plugin_example/plugins/modules/output_formatters/: __init__.py  example_xrdict_to_outlist_output_formatter.py  imagery_test.py
geoips_plugin_example/plugins/yaml/product_defaults/visir/: Infrared-Test.yaml
geoips_plugin_example/plugins/yaml/products/: Example-Unsectored-Xarray-Dict-to-Algorithm-to-Output-Format-Product.yaml  abi.yaml
geoips_template_plugin/: default_algorithm.py
geoips_template_plugin/interface_modules/algorithms/: single_channel_test.py
geoips_template_plugin/interface_modules/filename_formats/: test_fname.py
geoips_template_plugin/interface_modules/interpolation/pyresample_wrappers/: interp_gauss_test.py
geoips_template_plugin/interface_modules/output_formats/: imagery_test.py
geoips_template_plugin/interface_modules/user_colormaps/visir/: Infrared_Test.py
setup/: config_plugin
src/: __init__.py
tests/: README.md  test_algorithm.py  test_all.sh
tests/integration_tests/: test_geoips_plugin_example.py
tests/outputs/Example-Unsectored-Xarray-Dict-to-Algorithm-to-Output-Format-Product/: line_0  line_1  line_2  line_3  line_4  line_5  line_6  line_7  line_8  line_9
tests/scripts/: Example-Unsectored-Xarray-Dict-to-Algorithm-to-Output-Format-Product.sh  abi_aws.sh
